GCA-165 Implement microservices authorization